[package]
name = "metro"
version = "0.1.0"
authors = ["Basti Ortiz <39114273+BastiDood@users.noreply.github.com>"]
edition = "2021"
resolver = "2"

[profile.release]
strip = true
opt-level = "s"

[profile.dev]
# Symbols are nice and they don't increase the size on Flash
debug = true
opt-level = "z"

[dependencies]
esp-idf-hal = "0.41.1"
esp-idf-svc = "0.46.0"

[dependencies.embedded-svc]
version = "0.25.0"
default-features = false
features = ["std", "log"]

[dependencies.esp-idf-sys]
version = "0.33.0"
features = ["binstart"]

[build-dependencies]
embuild = "0.31.1"

# v5.0 and master require patches due to https://github.com/esp-rs/esp-idf-template/issues/91#issuecomment-1508241327
[patch.crates-io]
esp-idf-hal = { git = "https://github.com/esp-rs/esp-idf-hal" }
esp-idf-svc = { git = "https://github.com/esp-rs/esp-idf-svc" }
