[package]
name = "metro-tap"
version = "0.1.0"
authors = ["Basti Ortiz <39114273+BastiDood@users.noreply.github.com>"]
edition = "2021"
resolver = "2"

[profile.release]
strip = true
opt-level = "s"

[profile.dev]
# Symbols are nice and they don't increase the size on Flash
debug = true
opt-level = "z"

[dependencies]
anyhow = "1"
log = "0.4"

[dependencies.embedded-svc]
version = "0.25.0"
default-features = false
features = ["std", "log", "nightly"]

[dependencies.esp-idf-hal]
version = "0.41.0"
features = ["edge-executor"]

[dependencies.esp-idf-svc]
version = "0.46.0"

[dependencies.esp-idf-sys]
version = "0.33.0"
features = ["binstart"]

[build-dependencies]
embuild = "0.31.1"
